@@ -286,6 +286,7 @@ localizedStrings["Objects"] = "Objects";
 localizedStrings["Offline"] = "Offline";
 localizedStrings["Online"] = "Online";
 localizedStrings["Only enable for this session"] = "Only enable for this session";
+localizedStrings["Overrides"] = "Overrides";
 localizedStrings["Reveal in Network Panel"] = "Reveal in Network Panel";
 localizedStrings["Reveal in network panel"] = "Reveal in network panel";
 localizedStrings["Open Link in New Tab"] = "Open Link in New Tab";
@@ -293,7 +294,7 @@ localizedStrings["Open link in new tab"] = "Open link in new tab";
 localizedStrings["Open Link in Resources Panel"] = "Open Link in Resources Panel";
 localizedStrings["Open link in Resources panel"] = "Open link in Resources panel";
 localizedStrings["Other"] = "Other";
-localizedStrings["Override device metrics"] = "Override device metrics";
+localizedStrings["Device metrics"] = "Device metrics";
 localizedStrings["Paint"] = "Paint";
 localizedStrings["Parse"] = "Parse";
 localizedStrings["Parser"] = "Parser";
@@ -623,7 +624,7 @@ localizedStrings["4 spaces"] = "4 spaces";
 localizedStrings["8 spaces"] = "8 spaces";
 localizedStrings["Tab character"] = "Tab character";
 localizedStrings["Search in content scripts"] = "Search in content scripts";
-localizedStrings["Override User Agent"] = "Override User Agent";
+localizedStrings["User Agent"] = "User Agent";
 localizedStrings["Other..."] = "Other...";
 localizedStrings["Search across all sources"] = "Search across all sources";
 localizedStrings["Evaluate in console"] = "Evaluate in console";
